<resources>
    <string name="app_name">Shifter Partner</string>
    <string name="app_name2">Shifter\nPartner</string>
    <string name="app_notification_description">Online Deliveryboy</string>
    <string name="google_maps_key">AIzaSyD8IR3hFe5hlBFJr81pgpPJtB28xLiJPmw</string>
    <string name="e_genie_delivery_partner">Shifter \nDelivery Partner</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_number">Enter your mobile number</string>
    <string name="hint_password">Enter your password</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="continues">Continue</string>
    <string name="by_signingprivacy">By signing up I agree to <b>terms Of Use</b> and <b>Privacy Policy</b></string>
    <string name="be_our_delivery">Be Our Delivery Partner</string>
    <string name="your_time">Freedom to earn at your time</string>
    <string name="verification_code">Verification Code</string>
    <string name="primary_mobile_number">Primary mobile number</string>
    <string name="secoundary_mobile">Secoundary mobile number (Optional)</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="nationality">Nationality</string>
    <string name="enter_your_nationality">Enter your nationality</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="city">City</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="complete_address">Complete address</string>
    <string name="languages_you_know">Languages you know</string>
    <string name="your_profile_picture">Your profile picture</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="submit_and_next">SUBMIT AND NEXT</string>
    <string name="welcome_to_e_genie">Welcome to Shifter</string>
    <string name="just_few_step">Just few step to complete \nand then you can start \nearning with Shifter.</string>
    <string name="personal_document">Personal Document</string>
    <string name="pending_document">Pending Document</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="additional_information">Additional Information</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="enter_correct">Enter correct details/clear \npictures of documents below \nfor smooth verification</string>
    <string name="document">Document</string>
    <string name="residence_permit_passport">Residence Permit / Passport</string>
    <string name="address_proof">Address Proof</string>
    <string name="aadhar_card">Aadhar card</string>
    <string name="driving_license">Driving License</string>
    <string name="verification_process">Verification Process</string>
    <string name="identification_number">Identification Number</string>
    <string name="enter_your_id">Enter your number/code/ for the ID</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_front">Upload Front</string>
    <string name="upload_back">Upload Back</string>
    <string name="contact_details">Contact Details</string>
    <string name="enter_their_name">Enter their name</string>
    <string name="your_relationship">Your relationship with the contact</string>
    <string name="enter_their_contact_number">Enter their Contact number</string>
    <string name="engagement_survey">Engagement Survey</string>
    <string name="engagement_question">Engagement Question</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rider_s_kit">Rider\'s Kit</string>
    <string name="other_dynamic">Other</string>
    <string name="kit_needed">Kit Needed</string>
    <string name="bicycle">Bicycle</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="kit">Only upload a photo if you have selected ‘Yes’ to having your own kit.</string>
    <string name="qu">Do you have your own kit ?*</string>
    <string name="ans">if you do not have kit of your own, you will be able to order some at no cost to you!</string>
    <string name="submit">SUBMIT</string>
    <string name="outside_e_genie">What is your Main Activity Outside Shifter ?</string>
    <string name="verification_identity">Verification identity</string>
    <string name="rider_kit">Rider Kit</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="vehicle_registration_number">Vehicle Registration Number</string>
    <string name="upload_vehicle_picture">Upload Vehicle Picture</string>
    <string name="bank_details">Bank Details</string>
    <string name="enter_your_iban_number">Enter your IBAN Number</string>
    <string name="enter_your_bank_name">Enter your Bank Name</string>
    <string name="enter_your_account_holder_name">Enter your Account Holder Name</string>
    <string name="enter_your_vat_id">Enter your VAT ID</string>
    <string name="verification_completed">Verification completed !!!</string>
    <string name="home">Home</string>
    <string name="orders">Pickup Order</string>
    <string name="ordersany">Buy Anything Order</string>
    <string name="notificatio">Notification</string>
    <string name="acount">Account</string>
    <string name="welcome_partner">Welcome Partner,</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="this_month">this month</string>
    <string name="overview_of">Overview of</string>
    <string name="latest_order">Latest Order</string>
    <string name="earning">Earning</string>
    <string name="completed">Completed</string>
    <string name="rating">Rating</string>
    <string name="summary_for">Summary for</string>
    <string name="_3_month">3 month</string>
    <string name="order_details">Order Details</string>
    <string name="estimate_time">Estimate Time</string>
    <string name="reject">REJECT</string>
    <string name="send">SEND</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_reason">Select Reason</string>
    <string name="notification">Notification</string>
    <string name="wallet">Wallet</string>
    <string name="my_balance">My Balance</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="transaction_history">Transaction History</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="select_this_address">SELECT THIS ADDRESS</string>
    <string name="complete_the_address_house_no_lane_no_etc">Complete the address house no, lane no, etc</string>
    <string name="landmark_addional_information_etc_optional">LandMark, Addional Information etc (optional)</string>
    <string name="detail_location">Detail Location</string>
    <string name="next">Next</string>
    <string name="proceed">Proceed</string>
    <string name="personal_info">Personal Info</string>
    <string name="my_account">My Account</string>
    <string name="payout_request">Payout Request</string>
    <string name="payout_history">Payout History</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="welcome">Welcome</string>
    <string name="order_id">Order ID</string>
    <string name="date">Date</string>
    <string name="orderid">Orderid</string>
    <string name="no_payment_required">No Payment Required</string>
    <string name="front_uploaded">Front Uploaded</string>
    <string name="back_uploaded">Back Uploaded</string>
    <string name="rc_front_uploaded">RC Front Uploaded</string>
    <string name="rc_back_uploaded">RC Back Uploaded</string>
    <string name="puc_uploaded">PUC Uploaded</string>
    <string name="proceed_for_confirmation">Proceed for confirmation</string>
    <string name="proceed_service_bill">Proceed service bill</string>
    <string name="confirm_order_btn">CONFIRM ORDER</string>
    <string name="reject_btn">REJECT</string>
    <string name="pickup_complete">PICKUP COMPLETE</string>
    <string name="cancel">Cancel</string>
    <string name="drop">DROP ORDER</string>
    <string name="select_location">Select Location</string>
    <string name="move_map_to_select_location">Move map to select location</string>
    <string name="min_deliver">min deliver</string>
    <string name="confirm">Confirm</string>
    <string name="pending">Pending</string>
    <string name="item_unavailable">Item Unavailable</string>
    <string name="gps_not_enabled">Gps not enabled</string>
    <string name="exit_app">Exit App</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_delivery_types_available">No delivery types available</string>
    <string name="select_delivery_types">Select Delivery Types</string>
    <string name="enjoy_great_earnings">Enjoy great earnings and experience with Shifter</string>
    <string name="accept_now">Accept now</string>
    <string name="pickup_order">Pickup Order</string>
    <string name="buy_anything">Buy anything</string>
    <string name="final_steps">Final Steps</string>
    <string name="i_accept_terms">I accept Terms &amp; Conditions</string>
    <string name="joining_plan">Joining Plan</string>
    <string name="price">Price:</string>
    <string name="discount_price">Discount Price:</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="bank_account_details_title">Bank Account Details</string>
    <string name="enter_bank_account_info">Enter your bank account information</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="nationality_caps">Nationality</string>
    <string name="date_of_birth_caps">Date of Birth</string>
    <string name="address_caps">Address</string>
    <string name="known_languages">Known Languages</string>
    <string name="verification_status">Verification Status</string>
    <string name="verified">Verified</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="enter_nationality">Enter nationality</string>
    <string name="enter_date_of_birth">Enter your date of birth</string>
    <string name="enter_full_address">Enter your full address</string>
    <string name="enter_known_languages">Enter known languages</string>
    <string name="enter_account_holder_name">Please enter Account Holder Name</string>
    <string name="enter_account_number">Please enter Account Number</string>
    <string name="enter_ifsc_code">Please enter IFSC Code</string>
    <string name="enter_bank_name">Please enter Bank Name</string>
    <string name="enter_branch_name">Please enter Branch Name</string>
</resources>