<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_orders"
        android:enabled="true"
        android:icon="@drawable/parce"
        android:title="@string/orders" />

    <item
        android:id="@+id/navigation_ordersany"
        android:enabled="true"
        android:icon="@drawable/baseline_account_balance_wallet_24"
        android:title="@string/wallet" />
    <!-- android:title="@string/ordersany" -->
    <item
        android:id="@+id/navigation_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/notificatio" />

    <item
        android:id="@+id/navigation_user"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/acount" />


</menu>