<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".android.activity.BankAccountActivity">

    <!-- ================= HEADER ================= -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_back_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/bank_account_details_title"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- ================= SCROLL AREA ================= -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <!-- ❗ MUST be wrap_content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- ===== TOP INFO ===== -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/ic_bg_pages"
                android:paddingLeft="10dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/bank_account_details_title"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/enter_bank_account_info"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </LinearLayout>

            <!-- ===== FORM FIELDS ===== -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/account_holder_name"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_box">

                <EditText
                    android:id="@+id/ed_account_holder_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="@string/enter_account_holder_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="14dp"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/account_number"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_box">

                <EditText
                    android:id="@+id/ed_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="@string/enter_account_number"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="14dp"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ifsc_code"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_box">

                <EditText
                    android:id="@+id/ed_ifsc_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="@string/enter_ifsc_code"
                    android:inputType="textCapCharacters"
                    android:maxLength="11"
                    android:padding="10dp"
                    android:textSize="14dp"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/bank_name"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_box">

                <EditText
                    android:id="@+id/ed_bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="@string/enter_bank_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="14dp"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/branch_name"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_box">

                <EditText
                    android:id="@+id/ed_branch_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="@string/enter_branch_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="14dp"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <!-- ===== SPACE FOR KEYBOARD ===== -->
            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <!-- ===== SUBMIT ===== -->
            <TextView
                android:id="@+id/txt_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/submit"
                android:theme="@style/AppTheme.Button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
