<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".android.activity.AccountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_back_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/verification_process"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/ic_bg_pages"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/bank_account_details"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="5dp"
                    android:text="@string/enter_correct"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/bank_details"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/ed_ibannumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_box"
                android:gravity="start|center"
                android:hint="@string/enter_your_iban_number"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/ed_bankname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_box"
                android:gravity="start|center"
                android:hint="@string/enter_your_bank_name"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/ed_accountholder"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_box"
                android:gravity="start|center"
                android:hint="@string/enter_your_account_holder_name"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/ed_vatid"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_box"
                android:gravity="start|center"
                android:hint="@string/enter_your_vat_id"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="14dp" />


            <View
                android:layout_width="20dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/txt_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/submit"
                android:theme="@style/AppTheme.Button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>